--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "android:staging": "react-native run-android --variant=stagingdebug",
+    "android:staging-release": "react-native run-android --variant=stagingrelease",
+    "android:dev": "react-native run-android --variant=developmentdebug",
+    "android:dev-release": "react-native run-android --variant=developmentrelease",
+    "android:prod": "react-native run-android --variant=productiondebug",
+    "android:prod-release": "react-native run-android --variant=productionrelease",
+    "ios:dev": "ENVFILE=.env.development react-native run-ios --scheme 'ReactnativeBoilerplateDevelopment'",
+    "ios:prod": "ENVFILE=.env.production react-native run-ios --scheme 'ReactnativeBoilerplate'",
+    "ios:staging": "ENVFILE=.env.staging react-native run-ios --scheme 'ReactnativeBoilerplateStaging'"
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-config": "^1.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
