--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "android:staging": "react-native run-android --variant=stagingdebug",
     "android:staging-release": "react-native run-android --variant=stagingrelease",
     "android:dev": "react-native run-android --variant=developmentdebug",
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "~6.0.1",
     "@unimodules/core": "6.0.0",
     "apisauce": "2.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "formik": "^2.2.9",
     "i18n-js": "3.8.0",
     "react": "17.0.1",
