--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "ios:prod": "ENVFILE=.env.production react-native run-ios --scheme 'ReactnativeBoilerplate'",
     "ios:staging": "ENVFILE=.env.staging react-native run-ios --scheme 'ReactnativeBoilerplateStaging'"
   },
-  "engines" : {
-    "node" : "12.13.0"
+  "engines": {
+    "node": "12.13.0"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
@@ -102,5 +102,8 @@
       "json",
       "node"
     ]
-  }
+  },
+  "setupFiles": [
+    "./path/to/jestSetupFile.js"
+  ]
 }
