--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "android:dev-release": "react-native run-android --variant=developmentrelease",
     "android:prod": "react-native run-android --variant=productiondebug",
     "android:prod-release": "react-native run-android --variant=productionrelease",
-    "ios:dev": "ENVFILE=.env.development react-native run-ios --scheme 'ReactnativeBoilerplateDevelopment'",
-    "ios:prod": "ENVFILE=.env.production react-native run-ios --scheme 'ReactnativeBoilerplate'",
+    "ios:dev": "ENVFILE=.env.development react-native run-ios --scheme 'ReactNativeBoilerplateDevelopment'",
+    "ios:prod": "ENVFILE=.env.production react-native run-ios --scheme 'reactNativeBoilerplate'",
     "ios:staging": "ENVFILE=.env.staging react-native run-ios --scheme 'ReactnativeBoilerplateStaging'"
   },
   "engines": {
