--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "android:prod-release": "react-native run-android --variant=productionrelease",
     "ios:dev": "ENVFILE=.env.development react-native run-ios --scheme 'ReactNativeBoilerplateDevelopment'",
     "ios:prod": "ENVFILE=.env.production react-native run-ios --scheme 'reactNativeBoilerplate'",
-    "ios:staging": "ENVFILE=.env.staging react-native run-ios --scheme 'ReactnativeBoilerplateStaging'"
+    "ios:staging": "ENVFILE=.env.staging react-native run-ios --scheme 'ReactnativeBoilerplateStaging'",
+    "storybook": "start-storybook -p 9001 -c ./storybook"
   },
   "engines": {
     "node": "12.13.0"
